Create the IT test to capture the failure store functionality